# byte-bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  example.env  pull_request_template.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
byte_bot/: __main__.py  byte_bot.py  config.py  role_toggle.py
byte_bot/cogs/: Utilities.py  about.py  feature_suggest.py  interviewprompt.py  job_market_analyzer.py  leetcode.py  ping.py  role_toggle.py  rules.py  utilities.py
byte_bot/data/: interview_questions.json
byte_bot/services/: database_service.py  feature_suggest_service.py  interviewprompt_service.py  leetcode_service.py  role_toggle_service.py  tiktok_tracker_service.py  youtube_tracker_service.py
docs/: local-llm-agent-design.md
tests/: TESTING.md  conftest.py
tests/integration/: test_interviewprompt.py  test_job_market_analyzer.py  test_leetcode.py  test_suggest_feature.py  test_utilities.py
tests/unit/: test_byte_bot.py  test_database_service.py  test_feature_suggest_service.py  test_interviewprompt_service.py  test_job_market_analyzer.py  test_leetcode_service.py  test_role_toggle_cog.py  test_role_toggle_service.py  test_tiktok_tracker_service.py  test_youtube_tracker_service.py
