[project]
name = "byte-bot"
version = "0.1.0"
description = "A helpful Discord bot for the Byte Club Community"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Dependencies should be added here, followed by running `uv lock` to update the lock file.
    "discord.py",
    "dotenv",
    "requests>=2.32.5",
    "ruff",
    "python-jobspy",
]

# Ruff is a formatting plugin that can be used with various editors and tools. 
# The configuration below sets some options for Ruff
[tool.ruff]
ignore-init-module-imports = true # Prevents linter from complaining about imports in __init__.py files
line-length = 120 # Sets the maximum line length to 120 characters.

[tool.ruff.format]
preview = true
quote-style = "preserve"

[dependency-groups]
dev = [
    "dpytest>=0.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
